backend/CompiledFiles/py2javaParser.py
# Generated from /Users/blake/Documents/ppl/JavaPy-Translator/backend/grammars/py2java.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class py2javaParser ( Parser ):

    grammarFileName = "py2java.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "','", "')'", "'and'", "'or'", 
                     "'>'", "'<'", "'=='", "'!='", "'<='", "'>='", "'+'", 
                     "'-'", "'*'", "'/'", "'not'", "'--'", "'++'", "'+='", 
                     "'-='", "<INVALID>", "'def'", "'if'", "'elif'", "'else'", 
                     "':'", "'break'", "'while'", "'for'", "'in'", "'range'", 
                     "'return'", "'print'", "'True'", "'False'", "'None'", 
                     "<INVALID>", "<INVALID>", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "MAIN", "DEF", "IF", "ELIF", "ELSE", 
                      "COLON", "BREAK", "WHILE", "FOR", "IN", "RANGE", "RETURN", 
                      "PRINT", "TRUE", "FALSE", "NONE", "STRING", "ID", 
                      "EQUAL", "NUMBER", "FLOAT", "NL", "WS" ]

    RULE_program = 0
    RULE_stmt = 1
    RULE_whileStmt = 2
    RULE_forStmt = 3
    RULE_rangeExp = 4
    RULE_asg = 5
    RULE_ifStmt = 6
    RULE_elifStmt = 7
    RULE_elseStmt = 8
    RULE_funcStmt = 9
    RULE_breakStmt = 10
    RULE_postfixStmt = 11
    RULE_returnStmt = 12
    RULE_mainStmt = 13
    RULE_printStmt = 14
    RULE_block = 15
    RULE_callStmt = 16
    RULE_exp = 17
    RULE_logicExp = 18
    RULE_compExp = 19
    RULE_addExp = 20
    RULE_mulExp = 21
    RULE_unaryExp = 22
    RULE_atom = 23
    RULE_postfix = 24
    RULE_printArgs = 25
    RULE_param = 26

    ruleNames =  [ "program", "stmt", "whileStmt", "forStmt", "rangeExp", 
                   "asg", "ifStmt", "elifStmt", "elseStmt", "funcStmt", 
                   "breakStmt", "postfixStmt", "returnStmt", "mainStmt", 
                   "printStmt", "block", "callStmt", "exp", "logicExp", 
                   "compExp", "addExp", "mulExp", "unaryExp", "atom", "postfix", 
                   "printArgs", "param" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    MAIN=21
    DEF=22
    IF=23
    ELIF=24
    ELSE=25
    COLON=26
    BREAK=27
    WHILE=28
    FOR=29
    IN=30
    RANGE=31
    RETURN=32
    PRINT=33
    TRUE=34
    FALSE=35
    NONE=36
    STRING=37
    ID=38
    EQUAL=39
    NUMBER=40
    FLOAT=41
    NL=42
    WS=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(py2javaParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(py2javaParser.StmtContext)
            else:
                return self.getTypedRuleContext(py2javaParser.StmtContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(py2javaParser.NL)
            else:
                return self.getToken(py2javaParser.NL, i)

        def getRuleIndex(self):
            return py2javaParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = py2javaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 56
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [py2javaParser.DEF, py2javaParser.IF, py2javaParser.BREAK, py2javaParser.WHILE, py2javaParser.FOR, py2javaParser.RETURN, py2javaParser.PRINT, py2javaParser.ID]:
                    self.state = 54
                    self.stmt()
                    pass
                elif token in [py2javaParser.NL]:
                    self.state = 55
                    self.match(py2javaParser.NL)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 58 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << py2javaParser.DEF) | (1 << py2javaParser.IF) | (1 << py2javaParser.BREAK) | (1 << py2javaParser.WHILE) | (1 << py2javaParser.FOR) | (1 << py2javaParser.RETURN) | (1 << py2javaParser.PRINT) | (1 << py2javaParser.ID) | (1 << py2javaParser.NL))) != 0)):
                    break

            self.state = 60
            self.match(py2javaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainStmt(self):
            return self.getTypedRuleContext(py2javaParser.MainStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(py2javaParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(py2javaParser.ForStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(py2javaParser.IfStmtContext,0)


        def funcStmt(self):
            return self.getTypedRuleContext(py2javaParser.FuncStmtContext,0)


        def asg(self):
            return self.getTypedRuleContext(py2javaParser.AsgContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(py2javaParser.BreakStmtContext,0)


        def postfixStmt(self):
            return self.getTypedRuleContext(py2javaParser.PostfixStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(py2javaParser.ReturnStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(py2javaParser.PrintStmtContext,0)


        def callStmt(self):
            return self.getTypedRuleContext(py2javaParser.CallStmtContext,0)


        def getRuleIndex(self):
            return py2javaParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = py2javaParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.mainStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.whileStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.forStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.ifStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 66
                self.funcStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 67
                self.asg()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 68
                self.breakStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 69
                self.postfixStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 70
                self.returnStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 71
                self.printStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 72
                self.callStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(py2javaParser.WHILE, 0)

        def exp(self):
            return self.getTypedRuleContext(py2javaParser.ExpContext,0)


        def COLON(self):
            return self.getToken(py2javaParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(py2javaParser.BlockContext,0)


        def getRuleIndex(self):
            return py2javaParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = py2javaParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(py2javaParser.WHILE)
            self.state = 76
            self.exp()
            self.state = 77
            self.match(py2javaParser.COLON)
            self.state = 78
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(py2javaParser.FOR, 0)

        def ID(self):
            return self.getToken(py2javaParser.ID, 0)

        def IN(self):
            return self.getToken(py2javaParser.IN, 0)

        def rangeExp(self):
            return self.getTypedRuleContext(py2javaParser.RangeExpContext,0)


        def COLON(self):
            return self.getToken(py2javaParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(py2javaParser.BlockContext,0)


        def getRuleIndex(self):
            return py2javaParser.RULE_forStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)




    def forStmt(self):

        localctx = py2javaParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_forStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(py2javaParser.FOR)
            self.state = 81
            self.match(py2javaParser.ID)
            self.state = 82
            self.match(py2javaParser.IN)
            self.state = 83
            self.rangeExp()
            self.state = 84
            self.match(py2javaParser.COLON)
            self.state = 85
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RANGE(self):
            return self.getToken(py2javaParser.RANGE, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(py2javaParser.ExpContext)
            else:
                return self.getTypedRuleContext(py2javaParser.ExpContext,i)


        def getRuleIndex(self):
            return py2javaParser.RULE_rangeExp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRangeExp" ):
                return visitor.visitRangeExp(self)
            else:
                return visitor.visitChildren(self)




    def rangeExp(self):

        localctx = py2javaParser.RangeExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rangeExp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(py2javaParser.RANGE)
            self.state = 88
            self.match(py2javaParser.T__0)
            self.state = 89
            self.exp()
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==py2javaParser.T__1:
                self.state = 90
                self.match(py2javaParser.T__1)
                self.state = 91
                self.exp()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==py2javaParser.T__1:
                    self.state = 92
                    self.match(py2javaParser.T__1)
                    self.state = 93
                    self.exp()




            self.state = 98
            self.match(py2javaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(py2javaParser.ID, 0)

        def EQUAL(self):
            return self.getToken(py2javaParser.EQUAL, 0)

        def exp(self):
            return self.getTypedRuleContext(py2javaParser.ExpContext,0)


        def NL(self):
            return self.getToken(py2javaParser.NL, 0)

        def getRuleIndex(self):
            return py2javaParser.RULE_asg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsg" ):
                return visitor.visitAsg(self)
            else:
                return visitor.visitChildren(self)




    def asg(self):

        localctx = py2javaParser.AsgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_asg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(py2javaParser.ID)
            self.state = 101
            self.match(py2javaParser.EQUAL)
            self.state = 102
            self.exp()
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 103
                self.match(py2javaParser.NL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(py2javaParser.IF, 0)

        def exp(self):
            return self.getTypedRuleContext(py2javaParser.ExpContext,0)


        def COLON(self):
            return self.getToken(py2javaParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(py2javaParser.BlockContext,0)


        def elifStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(py2javaParser.ElifStmtContext)
            else:
                return self.getTypedRuleContext(py2javaParser.ElifStmtContext,i)


        def elseStmt(self):
            return self.getTypedRuleContext(py2javaParser.ElseStmtContext,0)


        def getRuleIndex(self):
            return py2javaParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = py2javaParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(py2javaParser.IF)
            self.state = 107
            self.exp()
            self.state = 108
            self.match(py2javaParser.COLON)
            self.state = 109
            self.block()
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 110
                    self.elifStmt() 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 116
                self.elseStmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElifStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIF(self):
            return self.getToken(py2javaParser.ELIF, 0)

        def exp(self):
            return self.getTypedRuleContext(py2javaParser.ExpContext,0)


        def COLON(self):
            return self.getToken(py2javaParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(py2javaParser.BlockContext,0)


        def getRuleIndex(self):
            return py2javaParser.RULE_elifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElifStmt" ):
                return visitor.visitElifStmt(self)
            else:
                return visitor.visitChildren(self)




    def elifStmt(self):

        localctx = py2javaParser.ElifStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(py2javaParser.ELIF)
            self.state = 120
            self.exp()
            self.state = 121
            self.match(py2javaParser.COLON)
            self.state = 122
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(py2javaParser.ELSE, 0)

        def COLON(self):
            return self.getToken(py2javaParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(py2javaParser.BlockContext,0)


        def getRuleIndex(self):
            return py2javaParser.RULE_elseStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseStmt" ):
                return visitor.visitElseStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseStmt(self):

        localctx = py2javaParser.ElseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_elseStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(py2javaParser.ELSE)
            self.state = 125
            self.match(py2javaParser.COLON)
            self.state = 126
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(py2javaParser.DEF, 0)

        def ID(self):
            return self.getToken(py2javaParser.ID, 0)

        def COLON(self):
            return self.getToken(py2javaParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(py2javaParser.BlockContext,0)


        def param(self):
            return self.getTypedRuleContext(py2javaParser.ParamContext,0)


        def getRuleIndex(self):
            return py2javaParser.RULE_funcStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncStmt" ):
                return visitor.visitFuncStmt(self)
            else:
                return visitor.visitChildren(self)




    def funcStmt(self):

        localctx = py2javaParser.FuncStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(py2javaParser.DEF)
            self.state = 129
            self.match(py2javaParser.ID)
            self.state = 130
            self.match(py2javaParser.T__0)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==py2javaParser.ID:
                self.state = 131
                self.param()


            self.state = 134
            self.match(py2javaParser.T__2)
            self.state = 135
            self.match(py2javaParser.COLON)
            self.state = 136
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(py2javaParser.BREAK, 0)

        def NL(self):
            return self.getToken(py2javaParser.NL, 0)

        def getRuleIndex(self):
            return py2javaParser.RULE_breakStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStmt" ):
                return visitor.visitBreakStmt(self)
            else:
                return visitor.visitChildren(self)




    def breakStmt(self):

        localctx = py2javaParser.BreakStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_breakStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(py2javaParser.BREAK)
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 139
                self.match(py2javaParser.NL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PostfixStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(py2javaParser.ID, 0)

        def postfix(self):
            return self.getTypedRuleContext(py2javaParser.PostfixContext,0)


        def exp(self):
            return self.getTypedRuleContext(py2javaParser.ExpContext,0)


        def NL(self):
            return self.getToken(py2javaParser.NL, 0)

        def getRuleIndex(self):
            return py2javaParser.RULE_postfixStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfixStmt" ):
                return visitor.visitPostfixStmt(self)
            else:
                return visitor.visitChildren(self)




    def postfixStmt(self):

        localctx = py2javaParser.PostfixStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_postfixStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(py2javaParser.ID)
            self.state = 143
            self.postfix()
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 144
                self.exp()


            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 147
                self.match(py2javaParser.NL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(py2javaParser.RETURN, 0)

        def exp(self):
            return self.getTypedRuleContext(py2javaParser.ExpContext,0)


        def NL(self):
            return self.getToken(py2javaParser.NL, 0)

        def getRuleIndex(self):
            return py2javaParser.RULE_returnStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = py2javaParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(py2javaParser.RETURN)
            self.state = 151
            self.exp()
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 152
                self.match(py2javaParser.NL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(py2javaParser.IF, 0)

        def MAIN(self):
            return self.getToken(py2javaParser.MAIN, 0)

        def COLON(self):
            return self.getToken(py2javaParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(py2javaParser.BlockContext,0)


        def getRuleIndex(self):
            return py2javaParser.RULE_mainStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainStmt" ):
                return visitor.visitMainStmt(self)
            else:
                return visitor.visitChildren(self)




    def mainStmt(self):

        localctx = py2javaParser.MainStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_mainStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(py2javaParser.IF)
            self.state = 156
            self.match(py2javaParser.MAIN)
            self.state = 157
            self.match(py2javaParser.COLON)
            self.state = 158
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(py2javaParser.PRINT, 0)

        def printArgs(self):
            return self.getTypedRuleContext(py2javaParser.PrintArgsContext,0)


        def NL(self):
            return self.getToken(py2javaParser.NL, 0)

        def getRuleIndex(self):
            return py2javaParser.RULE_printStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = py2javaParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_printStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(py2javaParser.PRINT)
            self.state = 161
            self.match(py2javaParser.T__0)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << py2javaParser.T__0) | (1 << py2javaParser.T__12) | (1 << py2javaParser.T__15) | (1 << py2javaParser.TRUE) | (1 << py2javaParser.FALSE) | (1 << py2javaParser.NONE) | (1 << py2javaParser.STRING) | (1 << py2javaParser.ID) | (1 << py2javaParser.NUMBER) | (1 << py2javaParser.FLOAT))) != 0):
                self.state = 162
                self.printArgs()


            self.state = 165
            self.match(py2javaParser.T__2)
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 166
                self.match(py2javaParser.NL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(py2javaParser.NL, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(py2javaParser.StmtContext)
            else:
                return self.getTypedRuleContext(py2javaParser.StmtContext,i)


        def getRuleIndex(self):
            return py2javaParser.RULE_block
